# OpenBCI_C

./: .gitignore  .test.c.swp  Makefile.am  README.md  configure.ac  makefile  openbci_c  openbci_c.c  openbci_c.h  test  test.c
include/: openbci_c.h
src/: openbci_c.c
util/: dump.c  test.c
